--- a/html/vidsImgsForms/index.html
+++ b/html/vidsImgsForms/index.html
@@ -44,7 +44,7 @@
             <input type="radio" name="only_one" id="five">
         </div>
         <input type="submit" value="Sign Up!">
-        <label >test</label>
+        <label >test 😎</label>
         <br> 
         <label >test2</label>
     </form>
