--- a/js/DOM/index.html
+++ b/js/DOM/index.html
@@ -51,7 +51,7 @@
             <option value="space-around">space-around</option>
         </select>
         <label for="alignItems"> Align items:</label>
-        <select name="alignItems" "onchange="alignFlex(this,flexboxTwo)">
+        <select name="alignItems" onchange="alignFlex(this,flexboxTwo)">
             <option value="flex-start">flex-start</option>
             <option value="flex-end">flex-end</option>
             <option value="center">center</option>
